[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Orb.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/orb/orb6.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objects/orb/orb1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objects/orb/orb2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/orb/orb4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Objects/orb/orb5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Objects/orb/orb3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Objects/orb/orb_destroy.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "75",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "60",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "30",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "15",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "45",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 30.0

[node name="Orb" type="RigidBody2D" groups=[
"damageable",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Linear" ]

[node name="OrbSprites" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "75"

[node name="HitBox" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="DestroySound" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="SpawnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="HoverTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="HoverTimer" to="." method="_on_HoverTimer_timeout"]


